--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.search-bar{
+  border: none;
+  outline: none;
+  width: 350px;
+}
+
+::-webkit-scrollbar{
+  width: 0px;
+  height: 1px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: rgb(114, 113, 113);
+  border-radius: 10px;
+  height: 200px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+
+.category-btn{
+  font-weight: bold !important;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  cursor: pointer;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding: 7px 15px;
+  margin: 10px 0;
+  border-radius: 20px;
+  transition:all .5s ease;
+}
+
+span{
+  margin: 0;
+  padding: 0;
+}
+
+.category-btn:hover{
+  background-color: #76323f !important;
+  color: #fff !important;
+}
+
+.category-btn:hover span{
+  color: #fff !important;
 }
