--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,23 @@ span{
 .category-btn:hover span{
   color: #fff !important;
 }
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+
+.react-player{
+  height: 77vh!important;
+  width: 100% !important;
+}
+
+@media screen and(max-width:600px){
+  .search-bar{
+    width: 200px;
+  }
+
+  .react-player{
+    height: 45vh!important;
+  }
+}
